--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,12 @@
   <nav class="navbar is-transparent">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
-        <img src="../static/logo/logo.jpg" alt="Sach Ka Saamna_logo" />
+        <img
+          src="../static/logo/logo.jpg"
+          alt="Sach Ka Saamna_logo"
+          class="mr-3"
+          style="padding-right: 0.5em"
+        />
         <h6 href="/" class="subtitle"><strong>Sach Ka Saamna</strong></h6>
       </a>
     </div>
