--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
   <nav class="navbar is-transparent">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
-        <img src="../static/logo/logo.jpg" alt="Sach Ka Saamna">
+        <img src="../static/logo/logo.jpg" alt="Sach Ka Saamna" style="padding-right: 0.5em">
         <h6 href="/" class="subtitle"><strong>Sach Ka Saamna</strong></h6>
       </a>
       
