--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
+
 <section class="hero is-white is-medium">
   <nav class="navbar is-transparent">
     <div class="navbar-brand">
@@ -9,43 +10,7 @@
       </a>
       
     </div>
-    <div id="navbar-burger-id" class="navbar-burger burger" data-target="navbar-menu-id">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <div id="navbar-menu-id" class="navbar-menu">
-      <div class="navbar-end">
-        <a class="navbar-item">
-          <div class="field">
-            <p class="control has-icons-left">
-              <input class="login-input input is-small is-success" type="text" id="login-user" placeholder="Username">
-                <span class="icon is-small is-left">
-                  <i class="fa fa-user"></i>
-                </span>
-            </p>
-          </div>
-        </a>
-        <a class="navbar-item">
-          <div class="field">
-            <p class="control has-icons-left">
-              <input class="login-input input is-small is-success" type="password" id="login-pass" placeholder="Password">
-                <span class="icon is-small is-left">
-                  <i class="fa fa-lock"></i>
-                </span>
-            </p>
-          </div>
-        </a>
-        <span class="navbar-item">
-          <a id="login-button" class="button is-primary is-inverted">
-            <span class="icon">
-              <i class="fa fa-check"></i>
-            </span>
-            <span>Login</span>
-          </a>
-        </span>
-      </div>
-    </div>
+   
   </nav>
 </section>
 <title>Sach Ka Saamna</title>
@@ -61,47 +26,14 @@
         </div>
         <div class="column is-auto">
           <div id="signup-box" class="signup-box">
+            <h1 class="title">Login/Sign Up</h1>
             <div class="signup-area">
-              <h1 class="title">Sign Up</h1>
-              <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                  <input id="signup-user" class="input is-success" type="text" placeholder="Username">
-                  <span class="icon is-small is-left">
-                    <i class="fa fa-user"></i>
-                  </span>
-                  <span class="icon is-small is-right">
-                    <i class="fa fa-check"></i>
-                  </span>
-                </p>
-              </div>
-              <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                  <input id="signup-mail" class="input is-success" type="text" placeholder="Email">
-                  <span class="icon is-small is-left">
-                    <i class="fa fa-envelope"></i>
-                  </span>
-                  <span class="icon is-small is-right">
-                    <i class="fa fa-check"></i>
-                  </span>
-                </p>
-              </div>
-              <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                  <input id="signup-pass" class="input" type="password" placeholder="Password">
-                  <span class="icon is-small is-left">
-                    <i class="fa fa-lock"></i>
-                  </span>
-                  <span class="icon is-small is-right">
-                    <i class="fa fa-check"></i>
-                  </span>
-                </p>
-              </div>
-              <br>
-              <a id="signup-button" class="form-button button is-primary is-inverted is-outlined">Sign Up</a>
-              <br>
-              <br>
-              <i><a id="feedback" class="feedback"></a></i>
+
+              <div id="sawo-container" style="height: 300px; width: 300px;">
             </div>
+              
+            </div>
+            
           </div>
         </div>
       </div>
@@ -113,7 +45,7 @@
     <div class="container">
       <div class="content has-text-centered">
         <p>
-          <strong>Sach Ka Saamna</strong> by fast
+          <strong>Sach Ka Saamna</strong>
           <span class="icon is-small">
             <i class="fa fa-copyright"></i>
           </span>2021</a>
@@ -125,5 +57,42 @@
 </section>
 {% endblock %}
 {% block scripts %}
+
+
+<script src="http://websdk.sawolabs.com/sawo.min.js"></script> 
+<script>
+    var config = {
+        // should be same as the id of the container created on 3rd step
+        containerID: "sawo-container",
+        // can be one of 'email' or 'phone_number_sms'
+        identifierType: "email",
+        // Add the API key copied from 2nd step
+        apiKey: '1a173654-bbb5-47be-bb93-0c158710f4cc',
+        // Add a callback here to handle the payload sent by sdk
+        onSuccess: (payload) => {
+            console.log(payload)
+            
+            $.post({
+              type: "POST",
+              url: "/signup",
+              data: {
+                verification_token: payload['verification_token'],
+                email: payload['identifier'],
+                user_id: payload['user_id']
+              },
+              success(response) {
+                var status = JSON.parse(response)["status"];
+                if (status === "Signup successful" || status==="Login successful") {
+                  location.reload();
+                } else {
+                  error("login-input");
+                }
+              },
+            });
+        },
+    };
+    var sawo = new Sawo(config);
+    sawo.showForm();
+</script>
 <script src="../static/js/scripts.js"></script>
 {% endblock %}
